package sz.learn.protobuf;


//option java_package = "org.echo.pojo.proto";
//option java_outer_classname = "SubscribeReq";

message SubscribeRequest {
    required int32 subReqID = 1;
    required string userName = 2;
    required string productName = 3;
    required string address = 4;

}